--- a/SoftwarePruebasUnit-master/maven-demo/.settings/org.eclipse.wst.common.component
+++ b/SoftwarePruebasUnit-master/maven-demo/.settings/org.eclipse.wst.common.component
@@ -2,7 +2,9 @@
     <wb-module deploy-name="maven-demo">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <property name="context-root" value="maven-demo"/>
         <property name="java-output-path" value="/maven-demo/target/classes"/>
     </wb-module>
